new code commit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+li:nth-child(1) {
+  color: #770012;
+}
+
+ul .myli{
+    transition: all 0.5s ease;
+}
+
+ul .myli:hover{
+    color: #770012;
+}
