--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-li:nth-child(1) {
+.myli:nth-child(1) {
   color: #770012;
 }
 
-ul .myli {
+.myli {
   transition: all 0.5s ease;
+  color: white;
 }
+
 
 ul .myli:hover {
   color: #770012;
@@ -16,6 +18,7 @@ ul .myli:hover {
 
 .myTrabs {
   transition: all 2.5s ease;
+  mix-blend-mode: difference;
   /* box-shadow: rgba(251, 161, 40, 70.42) 100px 40px 24px 3px; */
 }
 
@@ -31,4 +34,5 @@ nav{
 
 .mytext{
   color: #920308;
+ 
 }
