--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,6 @@ ul .myli:hover {
 .myTrabs {
   transition: all 2.5s ease;
   mix-blend-mode: difference;
-  /* box-shadow: rgba(251, 161, 40, 70.42) 100px 40px 24px 3px; */
 }
 
 .bg-black {
@@ -36,3 +35,11 @@ nav{
   color: #920308;
  
 }
+
+/* .animate__bounceIn{
+  animation-iteration-count: infinite;
+  animation-delay: 7s;
+  --animate-duration: 7.5s;
+  animation-duration: 9.5s;
+
+} */
