--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,7 @@ section{
 .myImgGet{
   height: 50px;
   width: 200px;
-  object-fit: fill;
+  object-fit: cover;
   border-radius: 100px;
   transition: all 0.5s ease;
 }
