--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,13 @@ nav {
   animation-duration: 9.5s;
 } */
 
+.animate__swing{
+  animation-iteration-count: infinite;
+  animation-delay: 7s;
+  --animate-duration: 2.5s;
+  animation-duration: 2.5s;
+}
+
 section {
   height: 100vh;
 }
