--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@ section:nth-child(1){
 
 .Success{
   position: relative;
-  top: 0%;
-  bottom: 0%;
-  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-64%, 20%);
 }
