--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,11 @@ section:nth-child(1){
 
 .NewCodeIsnow{
   height: 50vh;
+  width: 100%;
+  background: #35363A;
 }
+
+
 
 .myImgGet {
   height: 50px;
