--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,11 @@ section:nth-child(1){
   background: #35363A;
 }
 
+/* .myfirstgrid{
+  display: grid;
+  grid-template-columns: repeat(autofit, minmax(300px, 1fr));
+} */
+
 
 
 .myImgGet {
