New code is now added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,11 @@ section:nth-child(1){
 
 .bgColor{
   background: #434343;
+  transition: all 2.5s ease;
+}
 
+.bgColor:hover{
+  background: #F4622C;
 }
 
 .myImgGet {
