--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,14 @@ nav {
   animation-duration: 2.5s;
 }
 
+.animate__fadeInLeft{
+  animation-iteration-count: infinite;
+  animation-delay: 7s;
+  --animate-duration: 2.5s;
+  animation-duration: 2.5s;
+
+}
+
 section {
   height: 100vh;
 }
