new code commit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,10 @@ section:nth-child(1){
   background: #F4622C;
 }
 
+.need{
+  background: #F4622C;
+}
+
 .myImgGet {
   height: 50px;
   width: 200px;
