--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,12 +43,19 @@ nav {
   animation-iteration-count: infinite;
   animation-delay: 7s;
   --animate-duration: 7.5s;
-  animation-duration: 9.5s;
+  animation-duration: 9.5s; 
 } */
 
 .animate__swing{
   animation-iteration-count: infinite;
   animation-delay: 7s;
+  --animate-duration: 2.5s;
+  animation-duration: 2.5s;
+}
+
+.animate__shakeX{
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
   --animate-duration: 2.5s;
   animation-duration: 2.5s;
 }
