--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,3 +181,36 @@ section:nth-child(1){
 .Healthstate{
   background-color: #38393D; 
 }
+
+
+.container{
+  display: flex;
+  gap: 5px;
+}
+
+.avatar{
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid white;
+  cursor: pointer;
+  position: relative;
+  top: 0;
+  transition: all 0.5s ease;
+}
+
+.avatar:not(:first-child){
+ margin-left: -60px;
+}
+
+.container:hover > :not(:hover){
+  filter: blur(5px);
+}
+
+.container .avatar:hover{
+ z-index: 1;
+ filter: blur(0px);
+ box-shadow: 2px 2px 20px #333;
+ top: -22.5px;
+}
