--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,3 +114,8 @@ section:nth-child(1){
 .bgColor:hover{
   background: #F4622C;
 }
+
+.need{
+  background: #F4622C;
+  clip-path: circle(50% at 50% 50%);
+}
