--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,9 @@ section:nth-child(1){
   width: 20rem;
   height: 20rem;
 }
+
+.mywith{
+  width: 150%;
+  height: 100%;
+  object-fit: cover;
+}
