--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,3 +164,8 @@ section:nth-child(1){
 .myback{
   background: #35363a;
 }
+
+.myblur{
+  backdrop-filter: blur(5px);
+  background-color: rgba(226, 232, 240, 0.224);
+}
