--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -169,3 +169,9 @@ section:nth-child(1){
   backdrop-filter: blur(5px);
   background-color: rgba(226, 232, 240, 0.224);
 }
+
+
+.myWidth{
+  max-width: 80%;
+  object-fit: contain;
+}
