--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,3 +175,10 @@ section:nth-child(1){
   max-width: 80%;
   object-fit: contain;
 }
+
+.Success{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-64%, 20%);
+}
