--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -212,3 +212,11 @@ section:nth-child(1){
 .container:hover > :not(:hover){
   filter: blur(5px);
 }
+
+.container .avatar:hover{
+  z-index: 1;
+  filter: blur(0px);
+  box-shadow: 2px 2px 20px #333;
+  top: -22.5px;
+  transform: scale(1.6);
+ }
