--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,10 @@ nav {
   animation-duration: 2.5s;
 }
 
+.reme{
+  width: 66.666667%;
+}
+
 section {
   height: 100vh;
 }
@@ -244,6 +248,20 @@ section:nth-child(1){
   object-fit: cover;
 }
 
+.getNewFlex{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+}
+
+.myWidth{
+  max-width: 100%;
+  object-fit: contain;
+}
+
 }
 
 /* Adding my mobile version */
@@ -268,10 +286,30 @@ section:nth-child(1){
     justify-content: center;
     align-items: center;
     width: 100%;
+    
   }
   .myflexHeight{
     height: 100%;
   }
+
+  .myWidth{
+    width: 1050px;
+    object-fit: contain;
+  }
+
+  .mt-28{
+    margin-top: 10px;
+  }
+
+  .addingFlexHeigh{
+    height: 100%;
+  }
+
+  .reme{
+    width: 100%;
+    object-fit: fill;
+  }
+  
 }
 
 
