--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -325,6 +325,12 @@ section:nth-child(1){
     width: 90%;
     margin: 0 auto;
   }
+
+  .newGriElement{
+    width: 93%;
+    margin: 0 auto;
+    margin-bottom: 5%;
+  }
   
 }
 
