--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,6 +165,10 @@ section:nth-child(1){
   clip-path: circle(50% at 50% 50%);
 }
 
+.W-size{
+  width: 25%;
+}
+
 .myback{
   background: #35363a;
 }
@@ -267,6 +271,19 @@ section:nth-child(1){
   padding-bottom: 10%;
 }
 
+.healthState{
+  height: 100%;
+  padding-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
+.myElementFlex{
+  width: 100%;
+  object-fit: cover;
+  border: #ff0000 solid 4px;
+}
+
 }
 
 /* Adding my mobile version */
@@ -332,6 +349,21 @@ section:nth-child(1){
     margin-bottom: 5%;
   }
   
+  .healthState{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Healthstate{
+    background-color: #38393D; 
+    height: 100%;
+  }
+
+  .myHraC{
+    height: 1%;
+    width: 70%;
+    margin: 0 auto;
+  }
 }
 
 
