--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,12 +39,12 @@ nav {
   color: #920308;
 }
 
-/* .animate__bounceIn{
+.animate__bounceIn{
   animation-iteration-count: infinite;
   animation-delay: 7s;
-  --animate-duration: 7.5s;
-  animation-duration: 9.5s; 
-} */
+  --animate-duration: 2.5s;
+  animation-duration: 2.5s;
+}
 
 .animate__swing{
   animation-iteration-count: infinite;
