enhance Heros component: implement advanced animations, add hover effects, and improve layout for a more engaging user experience

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,6 +181,11 @@ section:nth-child(1){
   background-color: rgba(226, 232, 240, 0.224);
 }
 
+.backdropdesign{
+  backdrop-filter: blur(5px);
+  background-color: rgba(226, 232, 240, 0.224);
+}
+
 .myWidth{
   max-width: 80%;
   object-fit: contain;
